--- a/problem/css/login_register.css
+++ b/problem/css/login_register.css
@@ -24,7 +24,7 @@ input{
     width: 100%;
 }
 
-button{
+.login_button{
     margin-top: 10%;;
     padding: 8%;
     width: 100%;
@@ -37,3 +37,27 @@ display: flex;
 align-items: center;
 justify-content: center;
 }
+
+#feedback{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    visibility: hidden;
+    border: 1px solid black;
+    font-size: 20px;
+    padding: 10%;
+    top: 70vw;
+    left: 15vw;
+
+    position: absolute;
+    background-color: white;
+    border-radius: 0px 0px 10px 10px; 
+
+}
+
+#feedback.visible{
+    visibility: visible;
+}
+
+
