--- a/problem/css/index.css
+++ b/problem/css/index.css
@@ -6,7 +6,7 @@
 body{
     margin-left: 3%;
     border-radius: 3000px;
-    background-color: turquoise;
+    background-color: rgb(191, 232, 237);
     font-family: "Roboto_light";
     width: 337px;
     height: 666px;
