--- a/problem/css/login_register.css
+++ b/problem/css/login_register.css
@@ -20,12 +20,28 @@ width: 100%;
 }
 
 input{
-    height: 60%;
+    height: 30px;
     width: 100%;
+    font-size: 15px;
+
+}
+
+label{  
+    font-size: 17px;  
+    display: flex;
+    justify-content: left;
+    margin-top: 10px;
+
+}
+
+.Paragraph{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .login_button{
-    margin-top: 10%;;
+    margin-top: 30%;;
     padding: 8%;
     width: 100%;
     font-size: 18px;
@@ -45,15 +61,20 @@ justify-content: center;
     justify-content: center;
     visibility: hidden;
     border: 1px solid black;
-    font-size: 20px;
-    padding: 10%;
+    font-size: 18px;
+    padding: 5%;
 
     position: absolute;
     top: 70vw;
-    left: 15vw;
+    left: 17vw;
 
     background-color: white;
     border-radius: 0px 0px 10px 10px; 
+
+}
+
+#feedback_background.visible{
+    background-color: rgba(0,0,0,0.2);
 
 }
 
