--- a/problem/css/login_register.css
+++ b/problem/css/login_register.css
@@ -1,8 +1,6 @@
 
-
 main{
-    height:85%;
-    width: 93%;
+    height:90%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -11,6 +9,8 @@ main{
 
 main > div{
 width: 100%;
+min-height: 60%;
+
 }
 
 .center_object{
@@ -62,19 +62,21 @@ justify-content: center;
     visibility: hidden;
     border: 1px solid black;
     font-size: 18px;
-    padding: 5%;
+    padding: 2%;
 
     position: absolute;
     top: 70vw;
-    left: 17vw;
+    width: 70%;
 
     background-color: white;
-    border-radius: 0px 0px 10px 10px; 
+    border-radius: 10px;
 
 }
 
 #feedback_background.visible{
-    background-color: rgba(0,0,0,0.2);
+    background-color: rgba(0, 0, 0, 0.5);
+    height: 100%;
+
 
 }
 
