--- a/problem/css/quiz.css
+++ b/problem/css/quiz.css
@@ -3,6 +3,7 @@ main {
     background-position: center;
     background-repeat: no-repeat;
     display: flex;
+    justify-content: space-between;
 }
 
 
@@ -23,35 +24,52 @@ main {
     font-size: 10px;
 }
 
-.game_photo{
-    border-radius: 10px;
-    border: 1px solid gray;
-    margin: 3%;
-    height: 40%;
-    background-size: 85%;
-    background-position: center;
+#game{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
 }
 
+.game_folder{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
+}
+
+.game_folder > img{
+
+    margin: 2%; 
+    background-position: center;
+    background-size: cover;
+    max-height: 300px;
+    min-height: 150px;
+    max-width: 90vw;
+    border-radius: 10px;
+
+}
 
 .question_board{
+    height: 30%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 2%;
-    height: 25%;
 }
 
-.question_board > div{
+.question{
+    padding: 10px;    
     background-color: white;
     border: 0.5px solid gray;
     border-radius: 10px;
-    padding: 4%;
+
 
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.question_board > div:hover{
+.question:hover{
     background-color: lightblue;
 }
