--- a/problem/css/quiz.css
+++ b/problem/css/quiz.css
@@ -8,24 +8,29 @@ main {
 
 
 #login_box{
-    border-radius: 20px;
-    margin-top: 5%;
-    height: 5%;
+    border-radius: 10px;
+    width: 100%;
     background-color: white;
-    padding: 2%;
+    padding: 1%;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
-
 }
 
-#login button{
-    height: 5%;
-    font-size: 10px;
+#login_box > * {
+    font-size: 20px;
+}
+
+.waiting_for_game{
+    background-image: url(../media/logo.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 600px;
 }
 
 #game{
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -41,24 +46,26 @@ main {
 
 .game_folder > img{
 
-    margin: 2%; 
+    margin: 30% 0% 2% 0%; 
     background-position: center;
     background-size: cover;
-    max-height: 300px;
+    max-height: 400px;
     min-height: 150px;
-    max-width: 90vw;
+    max-width: 80vw;
     border-radius: 10px;
 
 }
 
 .question_board{
-    height: 30%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 2%;
+    margin: 0px 0px 10% 0px;
 }
 
 .question{
+    height: 40px;
+    font-size: 23px;
     padding: 10px;    
     background-color: white;
     border: 0.5px solid gray;
@@ -72,4 +79,8 @@ main {
 
 .question:hover{
     background-color: lightblue;
+}
+
+.question:active{
+    border: 1px solid gray;
 }
