--- a/problem/css/index.css
+++ b/problem/css/index.css
@@ -13,11 +13,9 @@ body{
     max-width: 545px;
     font-family: "Roboto";
     margin: 0px;
-   /* background-color: black; */
 }
 
 #wrapper{
-    /*background-color: rgb(191, 232, 237);*/
     border-radius: 10px;
     margin: 10px;
     padding: 10px;
@@ -52,6 +50,15 @@ body{
     width: 95%;
     font-size: 20px;
     padding: 10px;
+    border-radius: 10px;
+}
+
+#feedback > button:hover{
+    background-color: white;
+}
+
+#feedback > button:active{
+    background-color: white;
 }
 
 #feedback.visible{
