--- a/problem/css/login_register.css
+++ b/problem/css/login_register.css
@@ -55,7 +55,9 @@ label{
     font-size: 25px;  
 }
 
-#where_to > p{
+#where_to > a{
+    margin-top: 10%;
+color: black;
 display: flex;
 align-items: center;
 justify-content: center;
