--- a/problem/css/login_register.css
+++ b/problem/css/login_register.css
@@ -1,63 +1,81 @@
 
 
 main{
-    height:85%;
-    width: 93%;
+    width: 90%;
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
-}
-
-main > div{
-width: 100%;
-}
-
-.center_object{
+ }
+ 
+ 
+ .log_page{
+    background-color: rgb(191, 232, 237);
+ }
+ 
+ 
+ .reg_page{
+    background-color: rgb(97, 184, 97);
+ }
+ 
+ 
+ main > div{
+ width: 100%;
+ min-height: 60%;
+ 
+ 
+ }
+ 
+ 
+ .center_object{
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-input{
-    height: 60%;
-    width: 100%;
-}
-
-.login_button{
-    margin-top: 10%;;
-    padding: 8%;
-    width: 100%;
-    font-size: 18px;
-
-}
-
-#where_to > p{
-display: flex;
-align-items: center;
-justify-content: center;
-}
-
-#feedback{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    visibility: hidden;
-    border: 1px solid black;
+ }
+ 
+ 
+ input{
+    height: 30px;
+    width: 95%;
     font-size: 20px;
-    padding: 10%;
-    top: 70vw;
-    left: 15vw;
-
-    position: absolute;
-    background-color: white;
-    border-radius: 0px 0px 10px 10px; 
-
-}
-
-#feedback.visible{
-    visibility: visible;
-}
-
-
+    font-family: "Roboto";
+ }
+ 
+ 
+ label{ 
+    font-size: 20px; 
+    display: flex;
+    justify-content: left;
+    margin-top: 10px;
+ 
+ 
+ }
+ 
+ 
+ .Paragraph{
+    margin-top: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
+ 
+ 
+ .start_page_button{
+    margin-top: 20%;;
+    padding: 7%;
+    width: 100%;
+    font-size: 25px; 
+ }
+ 
+ 
+ #where_to > a{
+    margin-top: 10%;
+ color: black;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ }
+ 
+ 
+ 
+ 
+ 
