--- a/problem/css/quiz.css
+++ b/problem/css/quiz.css
@@ -81,9 +81,9 @@ main {
     background-color: white;
     border: 0.5px solid gray;
     border-radius: 10px;
- 
- 
- 
+
+    text-align: center;
+
  
     display: flex;
     align-items: center;
